# worldbuilding-mvp

./: .env.example  .gitignore  README.md  ROADMAP.md  alembic.ini  pyproject.toml
config/: __init__.py  settings.py
migrations/: env.py
migrations/versions/: 92e24cd776c3_initial_schema.py
src/resonance/application/use_cases/: chat.py  ingest_document.py
src/resonance/domain/: __init__.py  entities.py  ledger.py  services.py
src/resonance/infrastructure/database/: models.py  sqlite_repository.py
src/resonance/infrastructure/services/: chunkers.py  embeddings.py  extractors.py  openrouter_extractor.py
src/resonance/presentation/cli/: app.py
src/worldbuild/: __init__.py
src/worldbuild/application/use_cases/: chat.py  ingest_document.py
src/worldbuild/domain/: __init__.py  entities.py  services.py
src/worldbuild/infrastructure/database/: models.py  sqlite_repository.py
src/worldbuild/infrastructure/services/: embeddings.py  extractors.py
src/worldbuild/presentation/cli/: app.py
tests/: conftest.py
tests/domain/: test_ledger.py
tests/infrastructure/: test_sqlite_repository.py
