[project]
name = "worldbuilding-mvp"
version = "0.1.0"
description = "CLI-first worldbuilding assistant MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12,<0.13",
    "rich>=13.7,<14",
    "pydantic>=2.7,<3",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<1.14",
]

[project.scripts]
worldbuild = "worldbuild.presentation.cli.app:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
