[project]
name = "resonance"
version = "0.1.0"
description = "Resonance worldbuilding assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12,<0.13",
    "rich>=13.7,<14",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<1.14",
    "httpx>=0.25,<0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[project.scripts]
resonance = "resonance.presentation.cli.app:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
